// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PinoLoggerOptionsBuilder must build options with defaults 1`] = `
Object {
  "base": Object {
    "env": "test",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": Object {
    "level": [Function],
  },
  "hooks": Object {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": Array [
    "req.headers.authorization",
  ],
  "serializers": Object {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": undefined,
}
`;

exports[`PinoLoggerOptionsBuilder must build options without defaults 1`] = `
Object {
  "base": Object {},
  "formatters": Object {
    "level": [Function],
  },
  "hooks": Object {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": Array [],
  "serializers": Object {},
  "timestamp": [Function],
  "transport": undefined,
}
`;

exports[`PinoLoggerOptionsBuilder must log custom error 1`] = `
Object {
  "env": "test",
  "err": "some error",
  "hostname": "host",
  "level": "error",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log error 1`] = `
Object {
  "env": "test",
  "err": Object {
    "message": "some error",
    "stack": "Error: some error",
    "type": "Error",
  },
  "errHash": "932f64f7",
  "hostname": "host",
  "level": "error",
  "msg": "some error",
  "msgTemplateHash": "7611b3bb",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log error with custom message 1`] = `
Object {
  "env": "test",
  "err": Object {
    "message": "some error",
    "stack": "Error: some error",
    "type": "Error",
  },
  "errHash": "932f64f7",
  "hostname": "host",
  "level": "error",
  "msg": "custom message",
  "msgTemplateHash": "90c7844f",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log error without trace 1`] = `
Object {
  "env": "test",
  "err": Object {
    "message": "some error",
    "type": "Error",
  },
  "errHash": "0",
  "hostname": "host",
  "level": "error",
  "msg": "some error",
  "msgTemplateHash": "7611b3bb",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log message 1`] = `
Object {
  "env": "test",
  "hostname": "host",
  "level": "info",
  "msg": "hello",
  "msgTemplateHash": "248bfa47",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log message with args 1`] = `
Object {
  "env": "test",
  "hostname": "host",
  "level": "info",
  "msg": "hello world",
  "msgTemplateHash": "3504eb44",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log object 1`] = `
Object {
  "a": 1,
  "env": "test",
  "hostname": "host",
  "level": "info",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log object and message 1`] = `
Object {
  "a": 1,
  "env": "test",
  "hostname": "host",
  "level": "info",
  "msg": "hello",
  "msgTemplateHash": "248bfa47",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log object and message with args 1`] = `
Object {
  "a": 1,
  "env": "test",
  "hostname": "host",
  "level": "info",
  "msg": "hello world",
  "msgTemplateHash": "3504eb44",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must override level 1`] = `
Object {
  "base": Object {
    "env": "test",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": Object {
    "level": [Function],
  },
  "hooks": Object {
    "logMethod": [Function],
  },
  "level": "warn",
  "redact": Array [
    "req.headers.authorization",
  ],
  "serializers": Object {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": undefined,
}
`;

exports[`PinoLoggerOptionsBuilder must override pretty print 1`] = `
Object {
  "base": Object {
    "env": "test",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": Object {
    "level": [Function],
  },
  "hooks": Object {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": Array [
    "req.headers.authorization",
  ],
  "serializers": Object {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": Object {
    "options": Object {
      "colorize": true,
      "ignore": "pid,hostname,name,version,env,errHash,msgTemplateHash",
      "translateTime": "SYS:STANDARD",
    },
    "target": "pino-pretty",
  },
}
`;

exports[`PinoLoggerOptionsBuilder must use process.env that starts with BUILD_ 1`] = `
Object {
  "base": Object {
    "commit": "eefc20",
    "env": "test",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": Object {
    "level": [Function],
  },
  "hooks": Object {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": Array [
    "req.headers.authorization",
  ],
  "serializers": Object {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": undefined,
}
`;

exports[`PinoLoggerOptionsBuilder must use process.env.CONFIG_ENV if exists 1`] = `
Object {
  "base": Object {
    "env": "dev",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": Object {
    "level": [Function],
  },
  "hooks": Object {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": Array [
    "req.headers.authorization",
  ],
  "serializers": Object {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": undefined,
}
`;
